# genAI

./: README.md
mainframe-modernization-agent/: .gitignore  ARCHITECTURE.md  README.md  agentcore.toml  agentcore_app.py  requirements.txt  test_agent.py
mainframe-modernization-agent/agent/: README.md  config.py  customer_profile.py  graph.py  intent.py  main.py  memory.py  nodes.py  nodes_artifacts.py  nodes_listen.py  nodes_memory.py  pricing_inference.py  prompts.py  router.py  state.py  utils.py
mainframe-modernization-agent/deploy/: MCP_SCHEMA.md  README.md  dynamodb_tables.json  gateway-lambda-policy.json  gateway-tool-schema.json  gateway-trust-policy.json  ingest_kb.py  mainframe_mcp_lambda.py  package_mcp_lambda.py  setup_cloudfront.py  setup_recordings_pipeline.py  setup_websocket.py  sync_gateway_schema.py  transcribe_complete_lambda.py  transcribe_trigger_lambda.py  upload_lambda.py  ws_config.json  ws_lambda.py
mainframe-modernization-agent/diagrams/: README.md  architecture.drawio
mainframe-modernization-agent/evals/: README.md  dataset.jsonl  judge.py  report.py  run_agentcore.py  (+1 more)
mainframe-modernization-agent/mcp_server/: README.md  _helpers.py  pyproject.toml  server.py
mainframe-modernization-agent/mcp_server/data/: cobol_patterns.json  complexity_scoring.json  fsi_compliance.json  jcl_reference.json  mainframe_aws_mapping.json  migration_patterns.json  partner_scoring.json  partner_tools.json  phase_gates.json  service_comparisons.json  service_ranking_weights.json
mainframe-modernization-agent/mcp_server/tests/: test_mcp_tools.py
(+17 files in other folders)
